--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   firebase_auth: ^4.17.4
   cloud_firestore: ^4.15.4
   fluttertoast: ^8.2.4
+  image_picker: ^1.0.0 
+  firebase_storage: ^11.5.0 
+
 
 
 
