--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   # google_maps_flutter: ^2.5.0
   geocoding: ^2.0.4
   # geolocator: ^10.1.0
+  flutter_stripe: ^9.5.0
+  # http: ^0.13.5
+  cloud_functions: ^4.6.5
+
 
 
 
