--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   # http: ^0.13.5
   cloud_functions: ^4.6.5
   flutter_rating_bar: ^4.0.1
+  pie_chart: ^5.1.0
+  intl: ^0.18.1
+
 
 
 
